# P2_ShundongWang_SamuelRijks-

./: CMakeLists.txt
Headers/include/: Comodi.h  Contenidor.h  Element.h  Lletra.h  Seleccio.h
Sources/: main.cpp
Sources/src/: Comodi.cpp  Contenidor.cpp  Element.cpp  Lletra.cpp  Seleccio.cpp
