cmake_minimum_required(VERSION 3.26)
project(P2_ShundongWang_SamuelRijks)

set(CMAKE_CXX_STANDARD 23)

add_executable(P2_ShundongWang_SamuelRijks main.cpp
        main.cpp
        Headers/include/Contenidor.cpp
        Headers/include/Contenidor.h
        Headers/include/Contenidor.h
        Headers/include/Element.cpp
        Headers/include/Element.h)
